[gd_scene load_steps=11 format=3 uid="uid://brpmrfe8bjswa"]

[ext_resource type="PackedScene" uid="uid://btdffss434kcc" path="res://src/UI/panel_docker.tscn" id="1_gnjlj"]
[ext_resource type="Script" path="res://src/UI/Styles/body_outlines.gd" id="2_6qoje"]
[ext_resource type="Script" path="res://src/UI/styles_docker.gd" id="2_phubn"]
[ext_resource type="Script" path="res://src/UI/Styles/perspective_check_button.gd" id="3_mwq0g"]
[ext_resource type="Script" path="res://src/UI/Styles/body_shakes.gd" id="6_4b0yh"]
[ext_resource type="PackedScene" uid="uid://feawar53wfbd" path="res://src/UI/Styles/body_gradient.tscn" id="6_l1ma8"]
[ext_resource type="PackedScene" uid="uid://v2uq8yjc1gs6" path="res://src/UI/Styles/body_mask.tscn" id="7_vck18"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6omi"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljlkc"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vlao"]
content_margin_right = 6.0
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="StylesDocker" instance=ExtResource("1_gnjlj")]
offset_right = 200.0
offset_bottom = 1000.0
script = ExtResource("2_phubn")

[node name="HeaderPerspective" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="PerspectiveCheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderPerspective" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_PERSPECTIVE"
text_overrun_behavior = 3
script = ExtResource("3_mwq0g")

[node name="HeaderOutlines" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderOutlines" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_OUTLINES"

[node name="AddButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderOutlines" index="1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_r6omi")
theme_override_styles/focus = SubResource("StyleBoxFlat_ljlkc")
text = "+"

[node name="BodyOutlines" type="PanelContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4vlao")
script = ExtResource("2_6qoje")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyOutlines" index="0"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyOutlines/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyOutlines/ScrollContainer/MarginContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderShakes" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderShakes" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_SHAKES"

[node name="AddButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderShakes" index="1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_r6omi")
theme_override_styles/focus = SubResource("StyleBoxFlat_ljlkc")
text = "+"

[node name="BodyShakes" type="PanelContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="4"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4vlao")
script = ExtResource("6_4b0yh")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyShakes" index="0"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyShakes/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyShakes/ScrollContainer/MarginContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderGradient" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="5"]
layout_mode = 2

[node name="GradientCheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderGradient" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_GRADIENT"
text_overrun_behavior = 3

[node name="BodyGradient" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="6" node_paths=PackedStringArray("gradient_check_button") instance=ExtResource("6_l1ma8")]
layout_mode = 2
gradient_check_button = NodePath("../HeaderGradient/GradientCheckButton")

[node name="HeaderMask" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="7"]
layout_mode = 2

[node name="MaskCheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderMask" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_MASK"
text_overrun_behavior = 3

[node name="BodyMask" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" index="8" node_paths=PackedStringArray("active_check_button") instance=ExtResource("7_vck18")]
layout_mode = 2
active_check_button = NodePath("../HeaderMask/MaskCheckButton")

[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderPerspective/PerspectiveCheckButton" to="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderPerspective/PerspectiveCheckButton" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderOutlines/AddButton" to="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyOutlines" method="_on_add_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderShakes/AddButton" to="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyShakes" method="_on_add_button_pressed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderGradient/GradientCheckButton" to="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyGradient" method="_on_gradient_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HeaderMask/MaskCheckButton" to="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/BodyMask" method="_on_mask_check_button_toggled"]
